Fix overflow bug for mobile

--- a/src/tpl/css/styles.css
+++ b/src/tpl/css/styles.css
@@ -41,6 +41,8 @@ article table {
     background: #fff;
     margin: 0 auto;
     width: 100%;
+    display: block;
+    overflow: auto;
 }
 
 article tr:nth-child(even){
